--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "scripts": {
     "offiaccount": "offiaccount-cli --config offiaccount.config.js",
-    "dev:h5": "uni",
-    "dev:mp-alipay": "uni -p mp-alipay",
-    "dev:mp-weixin": "uni -p mp-weixin",
-    "build:h5": "uni build",
-    "build:mp-alipay": "uni build -p mp-alipay",
-    "build:mp-weixin": "uni build -p mp-weixin"
+    "dev:h5": "uni --mode dev",
+    "dev:mp-alipay": "uni -p mp-alipay  --mode dev",
+    "dev:mp-weixin": "uni -p mp-weixin  --mode dev",
+    "build:h5": "uni build  --mode prod",
+    "build:mp-alipay": "uni build -p mp-alipay --mode prod",
+    "build:mp-weixin": "uni build -p mp-weixin --mode prod"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4030620241128001",
@@ -28,8 +28,10 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.94.0",
     "typescript": "^4.9.4",
     "vite": "5.2.8",
+    "vite-plugin-html": "^3.2.2",
     "vue-tsc": "^1.0.24",
     "zdebug.js": "^0.3.0"
   }
