--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,5 +25,16 @@
     "mp-alipay": {
         "usingComponents": true
     },
+    "h5": {
+        "optimization": {
+            "treeShaking": {
+                "enable": true
+            }
+        },
+        "router": {
+            "mode": "hash",
+            "base": "./"
+        }
+    },
     "vueVersion": "3"
 }
