--- a/package.json
+++ b/package.json
@@ -6,29 +6,39 @@
     "dev:h5": "uni --mode dev",
     "dev:mp-alipay": "uni -p mp-alipay  --mode dev",
     "dev:mp-weixin": "uni -p mp-weixin  --mode dev",
+    "dev:mp-toutiao": "uni -p mp-toutiao  --mode dev",
     "build:h5": "uni build  --mode prod",
     "build:mp-alipay": "uni build -p mp-alipay --mode prod",
-    "build:mp-weixin": "uni build -p mp-weixin --mode prod"
+    "build:mp-weixin": "uni build -p mp-weixin --mode prod",
+    "build:mp-toutiao": "uni build -p mp-toutiao --mode prod"
   },
+  "keywords": [
+    "uniapp",
+    "H5",
+    "微信小程序",
+    "支付宝小程序",
+    "抖音小程序"
+  ],
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4030620241128001",
-    "@dcloudio/uni-components": "3.0.0-4030620241128001",
-    "@dcloudio/uni-h5": "3.0.0-4030620241128001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4030620241128001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4030620241128001",
-    "uni-query": "^2.0.0",
+    "@dcloudio/uni-app": "3.0.0-4080720251210001",
+    "@dcloudio/uni-components": "3.0.0-4080720251210001",
+    "@dcloudio/uni-h5": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4080720251210001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080720251210001",
+    "uni-query": "^2.3.0",
     "vue": "^3.4.21",
     "wechat-offiaccount": "^0.2.1"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4030620241128001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
+    "@dcloudio/uni-automator": "3.0.0-4080720251210001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080720251210001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080720251210001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080720251210001",
     "@vue/runtime-core": "^3.4.21",
-    "@vue/tsconfig": "^0.1.3",
-    "sass": "^1.94.0",
+    "@vue/tsconfig": "^0.5.1",
+    "sass": "^1.71.0",
     "typescript": "^4.9.4",
     "vite": "5.2.8",
     "vite-plugin-html": "^3.2.2",
